--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/dist/output.css" rel="stylesheet">
   <link rel="shortcut icon" href="/src/assets/img/icon.png" type="image/x-icon">
-  <title>nowaf</title>
+  <title>Mohammad Nowaf</title>
 </head>
 <body>
 <header class="bg-gray-800 text-white py-4">
